--- a/pages/programs.html
+++ b/pages/programs.html
@@ -308,7 +308,7 @@
     <!-- Logo + Description -->
     <div class="text-center">
       <div class="flex justify-center items-center mb-4">
-        <img src="./images/logo.jpg" alt="Logo" class="w-14 h-14 mr-3 rounded-full shadow-lg border-2 border-green-600">
+        <img src="../images/logo.jpg" alt="Logo" class="w-14 h-14 mr-3 rounded-full shadow-lg border-2 border-green-600">
         <h2 class="text-2xl font-bold">
           Federal Youth <span class="text-green-600">PARLIAMENT</span>
         </h2>
