--- a/pages/about.html
+++ b/pages/about.html
@@ -169,13 +169,11 @@
     <div class="max-w-6xl mx-auto px-6 flex flex-col md:flex-row items-center gap-10">
       <!-- Content -->
       <div class="flex flex-col gap-6" data-aos="fade-right">
-        <h2 class="text-3xl md:text-4xl font-bold text-gray-800">
+        <h2 class="text-3xl md:text-4xl font-bold text-center text-gray-800">
           Who <span class="text-green-600">We Are</span>
         </h2>
         <p class="text-lg text-gray-700 leading-relaxed">
-          We are a youth-driven community passionate about empowering young voices and enabling 
-          them to become tomorrow’s leaders. Through collaborative efforts, educational programs, 
-          and impactful initiatives, we aim to shape a brighter and more inclusive future.
+          The Federal Youth Parliament Pakistan (FYP) is a non-Political platform committed to empowering young leaders and promoting active youth participation in democratic, social, and policy-making processes across Pakistan.  Founded with the vision of nurturing responsible, skilled, and visionary youth, the FYP serves as a training ground where young individuals learn about parliamentary practices, legislation, and governance through real-time parliamentary sessions, debates, and policy discussions.  Beyond leadership and legislation, FYP actively engages in community service, social welfare initiatives, medical and relief camps, environmental and climate change projects, and various youth development programs that contribute to the betterment of society.  We believe that the youth of today are the policymakers of tomorrow, and through education, civic engagement, and social action, FYP continues to build a generation of ethical, compassionate, and visionary leaders dedicated to the progress of Pakistan
         </p>
         
       </div>
@@ -202,13 +200,17 @@
 
       <!-- Mission -->
       <div>
-        <h3 class="text-xl font-semibold text-green-700 mb-3">Our Mission</h3>
+        <h3 class="text-xl font-semibold text-green-700 mb-3">Our mission is to empower, educate, and engage the youth of Pakistan by:
+</h3>
         <ul class="space-y-2 text-gray-700 leading-relaxed list-disc list-inside">
-          <li>To work with grass root level groups.</li>
-          <li>To work with all communities without discrimination for the development of target group.</li>
-          <li>Working on Rights based approach and issues.</li>
-          <li>Development of linkages with similar organisations.</li>
-          <li>Networking with other organisations working for the same cause.</li>
+          <li>Providing a platform for democratic learning through parliamentary simulations and legislative training.
+</li>
+          <li>Encouraging youth participation in policy discussions, community service, and social welfare initiatives.
+</li>
+          <li>Organizing medical camps, environmental and climate change projects, and leadership development programs nationwide.
+</li>
+          <li>Promoting values of unity, integrity, and volunteerism among the youth to strengthen the foundations of a peaceful and progressive Pakistan.</li>
+          
         </ul>
       </div>
 
@@ -216,9 +218,10 @@
       <div>
         <h3 class="text-xl font-semibold text-green-700 mb-3">Our Vision</h3>
         <p class="text-gray-700 leading-relaxed">
-          Our vision is to provide <span class="font-medium">"Free of Charge"</span> humanitarian services 
-          to society's differently abled and needy members, and to cure 
-          (treatment and rehabilitation) the helpless drug addicts and patients.
+          To build a progressive, empowered, and responsible generation of young Pakistanis who actively contribute to democracy, social development, and nation-building through leadership, education, and civic engagement.
+        </p>
+        <p class="text-gray-700 leading-relaxed">
+          We envision a Pakistan where youth voices shape policies, promote justice, equality, and sustainability, and work collectively for a brighter and more inclusive future.
         </p>
       </div>
 
@@ -286,64 +289,64 @@ Below is our Certificate of Incorporation, which reflects our legitimacy and cre
     </div>
 
     <!-- Objectives Grid -->
-    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8" data-aos="fade-up">
-      <!-- Objective Item -->
-      <div class="p-6 bg-white rounded-xl shadow-md hover:shadow-lg transition">
-        <h3 class="font-semibold text-lg text-green-700 mb-2">♿ Disability Welfare</h3>
-        <p class="text-gray-600">Support and rehabilitation for people with disabilities, ensuring equal rights and development.</p>
-      </div>
-
-      <div class="p-6 bg-white rounded-xl shadow-md hover:shadow-lg transition">
-        <h3 class="font-semibold text-lg text-green-700 mb-2">⚧ Transgender Rights</h3>
-        <p class="text-gray-600">Working for dignity, inclusion, and equal opportunities for transgender communities.</p>
-      </div>
-
-      <div class="p-6 bg-white rounded-xl shadow-md hover:shadow-lg transition">
-        <h3 class="font-semibold text-lg text-green-700 mb-2">✝ Minorities Welfare</h3>
-        <p class="text-gray-600">Uplifting marginalized minorities through development, awareness, and support services.</p>
-      </div>
-
-      <div class="p-6 bg-white rounded-xl shadow-md hover:shadow-lg transition">
-        <h3 class="font-semibold text-lg text-green-700 mb-2">🚭 Drug Abuse Prevention</h3>
-        <p class="text-gray-600">Awareness programs, preventive education, and rehabilitation services for addicts.</p>
-      </div>
-
-      <div class="p-6 bg-white rounded-xl shadow-md hover:shadow-lg transition">
-        <h3 class="font-semibold text-lg text-green-700 mb-2">👩‍👩‍👦 Women, Children & Youth</h3>
-        <p class="text-gray-600">Programs to support growth, rights, and development through education and welfare.</p>
-      </div>
-
-      <div class="p-6 bg-white rounded-xl shadow-md hover:shadow-lg transition">
-        <h3 class="font-semibold text-lg text-green-700 mb-2">📚 Education & Skills</h3>
-        <p class="text-gray-600">Providing education, vocational training, water supply, and sanitation facilities.</p>
-      </div>
-
-      <div class="p-6 bg-white rounded-xl shadow-md hover:shadow-lg transition">
-        <h3 class="font-semibold text-lg text-green-700 mb-2">🚫 Ending Harmful Practices</h3>
-        <p class="text-gray-600">Eradication of child labor, women violence, and other harmful traditional practices.</p>
-      </div>
-
-      <div class="p-6 bg-white rounded-xl shadow-md hover:shadow-lg transition">
-        <h3 class="font-semibold text-lg text-green-700 mb-2">🏥 Health & Awareness</h3>
-        <p class="text-gray-600">Providing medical awareness, patient welfare, and rehabilitation for better health.</p>
-      </div>
-
-      <div class="p-6 bg-white rounded-xl shadow-md hover:shadow-lg transition">
-        <h3 class="font-semibold text-lg text-green-700 mb-2">🦠 HIV/AIDS & Social Issues</h3>
-        <p class="text-gray-600">Awareness, prevention, and services against HIV/AIDS, disasters, and social evils.</p>
-      </div>
-
-      <div class="p-6 bg-white rounded-xl shadow-md hover:shadow-lg transition">
-        <h3 class="font-semibold text-lg text-green-700 mb-2">💪 Youth Empowerment</h3>
-        <p class="text-gray-600">Building leadership, grooming political skills, and empowering youth to lead change.</p>
-      </div>
-
-      <div class="p-6 bg-white rounded-xl shadow-md hover:shadow-lg transition">
-        <h3 class="font-semibold text-lg text-green-700 mb-2">⚖ Legislation Awareness</h3>
-        <p class="text-gray-600">Educating youth on the legislation process to strengthen democracy and participation.</p>
-      </div>
-    </div>
+<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8" data-aos="fade-up">
+  <!-- Objective Item -->
+  <div class="p-6 bg-white rounded-xl shadow-md hover:shadow-lg transition">
+    <h3 class="font-semibold text-lg text-green-700 mb-2">🌱 Youth Leadership</h3>
+    <p class="text-gray-600">Encouraging young people to lead initiatives, make decisions, and shape a better future for their communities.</p>
   </div>
+
+  <div class="p-6 bg-white rounded-xl shadow-md hover:shadow-lg transition">
+    <h3 class="font-semibold text-lg text-green-700 mb-2">💪 Women Empowerment</h3>
+    <p class="text-gray-600">Promoting equality, independence, and opportunities for women to excel in all aspects of life.</p>
+  </div>
+
+  <div class="p-6 bg-white rounded-xl shadow-md hover:shadow-lg transition">
+    <h3 class="font-semibold text-lg text-green-700 mb-2">🔥 Youth Empowerment</h3>
+    <p class="text-gray-600">Providing young individuals with skills, confidence, and resources to contribute meaningfully to society.</p>
+  </div>
+
+  <div class="p-6 bg-white rounded-xl shadow-md hover:shadow-lg transition">
+    <h3 class="font-semibold text-lg text-green-700 mb-2">♿ Disable Rights</h3>
+    <p class="text-gray-600">Advocating for accessibility, inclusion, and equal rights for persons with disabilities.</p>
+  </div>
+
+  <div class="p-6 bg-white rounded-xl shadow-md hover:shadow-lg transition">
+    <h3 class="font-semibold text-lg text-green-700 mb-2">🏳️‍🌈 Transgender Rights</h3>
+    <p class="text-gray-600">Ensuring respect, recognition, and equal opportunities for transgender individuals through awareness and advocacy.</p>
+  </div>
+
+  <div class="p-6 bg-white rounded-xl shadow-md hover:shadow-lg transition">
+    <h3 class="font-semibold text-lg text-green-700 mb-2">🤝 Relief Activities</h3>
+    <p class="text-gray-600">Organizing humanitarian efforts to provide essential aid and support during crises and disasters.</p>
+  </div>
+
+  <div class="p-6 bg-white rounded-xl shadow-md hover:shadow-lg transition">
+    <h3 class="font-semibold text-lg text-green-700 mb-2">🩺 Medical / Dental Camps</h3>
+    <p class="text-gray-600">Offering free medical and dental checkups to improve community health and awareness.</p>
+  </div>
+
+  <div class="p-6 bg-white rounded-xl shadow-md hover:shadow-lg transition">
+    <h3 class="font-semibold text-lg text-green-700 mb-2">📢 Awareness Sessions</h3>
+    <p class="text-gray-600">Conducting informative sessions to educate people on health, social issues, and personal well-being.</p>
+  </div>
+
+  <div class="p-6 bg-white rounded-xl shadow-md hover:shadow-lg transition">
+    <h3 class="font-semibold text-lg text-green-700 mb-2">🗳️ Youth Politics</h3>
+    <p class="text-gray-600">Empowering youth to engage in democratic processes and play an active role in political development.</p>
+  </div>
+
+  <div class="p-6 bg-white rounded-xl shadow-md hover:shadow-lg transition">
+    <h3 class="font-semibold text-lg text-green-700 mb-2">🌍 Social Volunteerism</h3>
+    <p class="text-gray-600">Promoting a culture of service and volunteer work to strengthen communities and social bonds.</p>
+  </div>
+
+  <div class="p-6 bg-white rounded-xl shadow-md hover:shadow-lg transition">
+    <h3 class="font-semibold text-lg text-green-700 mb-2">🚭 Anti Narcotics</h3>
+    <p class="text-gray-600">Raising awareness about drug abuse and guiding youth toward healthy, drug-free living.</p>
+  </div>
+</div>
+</div>
 </section>
 
   <!-- Core Values -->
